Fixed up the appearance of the config page (was kind of broken on Firefox)

--- a/data/interfaces/default/css/style.css
+++ b/data/interfaces/default/css/style.css
@@ -408,6 +408,9 @@ form .checkbox small {
 form .indent input {
   margin-left: 15px;
 }
+form .suboptions {
+  margin-left: 15px;
+}
 ul,
 ol {
   margin-left: 2em;
@@ -1419,6 +1422,13 @@ div#artistheader h2 a {
   font-size: 10px;
   line-height: 10px;
   height: 10px;
+}
+.nopad {
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  padding: 0px 0px !important;
 }
 #album_table th#albumname,
 #upcoming_table th#artistname,
